# windows-setup

./: GetProperty.ps1  README.md  create.ps1  pyproject.toml  setHotkey.ps1  windows-setup.py
